--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <article>
-      <h1> Hola mundo </h1>
+      <h1> App de clima aun pendiente :) </h1>
     </article>
-    <script src="/main.js"></script>
+    <script src="./src/script.js"></script>
   </body>
 </html>
